# napkin

./: .gitignore  Cargo.toml  README.md
apps/atlas/: Cargo.toml  LICENSE  index.html  test.html
apps/atlas/assets/: crosshair.glb  manifest.json  sw.js
apps/atlas/src/: app.rs  lib.rs  main.rs  theme.rs
apps/atlas/src/plugins/: camera_controller.rs  crosshair_controller.rs  debug_controller.rs  edge_controller.rs  edge_metadata_controller.rs  mod.rs  napkin_controller.rs  node_controller.rs  node_metadata_controller.rs  project_controller.rs
apps/atlas/src/types/: atlas_context.rs  chat_history.rs  graph_settings.rs  graph_view.rs  mod.rs  napkin.rs  napkin_service.rs  napkin_settings.rs  panel_tab.rs  panel_type.rs
apps/atlas/src/widgets/: about.rs  menu_bar.rs  mod.rs
apps/atlas/src/widgets/tabs/: chat.rs  graph_view.rs  mod.rs  settings.rs
apps/napkin/: .env  Cargo.toml
apps/napkin/src/: config.rs  errors.rs  main.rs
apps/napkin/src/db/: edge_metadata.rs  edges.rs  mod.rs  node_metadata.rs  nodes.rs  projects.rs  vector.rs
apps/napkin/src/models/: edge_metadata.rs  edges.rs  mod.rs  node_metadata.rs  nodes.rs  projects.rs
apps/napkin/src/services/: edge_metadata.rs  edges.rs  node_metadata.rs  nodes.rs  vector.rs
database/: cleanup.sh  create_tables.sql  docker-compose.yml
src/: config.rs  errors.rs  main.rs
src/db/: mod.rs  projects.rs
src/models/: projects.rs
src/services/: projects.rs
