[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.26.0"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_rapier3d = "0.25.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", branch = "main" }
rand = "0.8.5"
poll-promise = "0.3.0"
ehttp = { version = "0.5.0", features = ["json"] }
serde_json = "1.0.116"
bevy_http_client = "0.5.2"
serde = "1.0.198"

[profile.dev.package."*"]
opt-level = 3
