[package]
name = "napkin"
description = "Multi-Dimensional Data-Layer API for AI Agents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.14.0"
deadpool-postgres = { version = "0.13.0", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.19"
pgvector = { version = "0.3.2", features = ["postgres", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1", "with-uuid-1"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "arbitrary"] }
